--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,8 @@
     height: 35px;
   }
 }
+a {
+  border: 1px solid white;
+  border-radius: 10px;
+  background: linear-gradient(to bottom, white, black);
+}
